--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/main.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/jquery-3.7.1.js"></script> -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
@@ -53,9 +54,9 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-12  my-auto head_text">
-                        <h1>您好，我是 XXX</h1>
-                        <h4>目前正就讀於 「大葉大學 資訊工程系-碩士班🎓」</h4>
-                        <h3>非常熱愛撰寫程式、對新知識感到好奇</h3>
+                        <h1>Hi🙋‍♀️，我是 詩穎</h1>
+                        <h4>畢業於「大葉大學 資訊工程系-碩士班🎓」</h4>
+                        <h3>平常熱愛撰寫程式、對新知識感到好奇</h3>
                         <h2>如果您願意給我一個展現的機會，歡迎聯絡我!</h2>
                         <div class="head_btn">
                             <a class="btn" href="#aboutMe" role="button">Scroll Down </a>
@@ -68,7 +69,16 @@
             <div class="container p-5">
                 <h1 class="titlehead">About<hr class="line"></h1>
                 <h4 class="mt-4">
-                    <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                    <p>
+                        本人為112年資訊工程系的應屆畢業碩士生，大學專題期間扮演著程式開發的角色，在專題實作期間
+                        第一次開始嘗試從專案構想到開發實作，因此在開發上仍有許多的進步空間，不管是資料庫設計或者程式開發撰寫上，
+                        都沒有完善的規劃和以及考慮程式重複性的重要，但也正是因為如此，我深刻體會到自主學習的重要性，
+                        舉例來說在開發APP時，由於沒有學習過相關APP開發的課程，因此當時在開發Android Studio時，
+                        透過網路上的教學影片和文章慢慢去摸索和學習，而在程式能力能需加強的前提下，花費將近半年的時間去提升解題和邏輯思考能力，
+                        而就是在大學專題的磨練下，也造就了後續我在開發專案時，遇到不熟悉的事物時能有基本的應對和實作的能力。
+                        <!-- 能需修改哭哭 -->
+                        
+                    </p>
                 </h4>
             </div>
         </section>
@@ -76,12 +86,20 @@
             <div class="container p-5">
                 <h1 class="titlehead">Resume<hr class="line"></h1>
                     <ul class="resumeEducation">
-                        <li><h3>2020</h3>
+                        <li><h3>2022 - 畢業專題</h3>
                             <ul>
-                                <li>XXXXXXXXXXXXXXXXXXXXXXXX</li>
+                                <li>1.Android Studio Java語言開發停車場 APP</li>
+                                <li>2.Arduino UNO 開發板，開發停車位感測模組 </li>
+                                <li>3.PHP程式語言，</li>
                             </ul>
                         </li>
-                        <li><h3>2020</h3>
+                        <li><h3>2023</h3>
+                            <ul>
+                                <li>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</li>
+                                <li>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</li>
+                            </ul>
+                        </li>
+                        <li><h3>2024</h3>
                             <ul>
                                 <li>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</li>
                                 <li>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</li>
@@ -93,44 +111,32 @@
         <section class="project" id="project">
             <div class="container p-5">
                 <h1 class="titlehead">Project<hr class="line"></h1>
-                <div id="carouselExampleIndicators" class="carousel slide carousel-dark mt-5">
-                    <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="assets/images/project1.png" class="projectImg d-block w-100">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>XXXXXXXXXXXXXXXXXXX</h5>
-                                <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                    <div class="row">
+                        <div class="col-lg-4 col-12 p-1">
+                            <div class="card project_img">
+                                <img src="assets/images/imgProject1.png" class="card-img-top" alt="...">
+                                <div class="project_btn">
+                                    <a class="btn" href="#aboutMe" role="button">Scroll Down </a>
+                                </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="assets/images/project2.png" class="projectImg d-block w-100">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>XXXXXXXXXXXXXXXXXXX</h5>
-                                <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-                            </div>                     
+                        <div class="col-lg-4 col-12 p-1">
+                            <div class="card project_img ">
+                                <img src="assets/images/imgProject2.png" class="card-img-top" alt="...">
+                                <div class="project_btn">
+                                    <a class="btn" href="#aboutMe" role="button">Scroll Down </a>
+                                </div>
+                              </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="assets/images/project1.png" class="projectImg d-block w-100">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>XXXXXXXXXXXXXXXXXXX</h5>
-                                <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-                            </div>                      
+                        <div class="col-lg-4 col-12 p-1">
+                            <div class="card project_img">
+                                <img src="assets/images/imgProject3.png" class="card-img-top" alt="...">
+                                <div class="project_btn">
+                                    <a class="btn" href="#aboutMe" role="button">Scroll Down </a>
+                                </div>
+                              </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
             </div>
         </section>       
         <section class="contact" id="contact">
