--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="#aboutMe">About Me </a> </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#resume">Resume </a>
+                            <a class="nav-link" href="#resume">Experience </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#project ">Project </a>
@@ -70,36 +70,37 @@
                 <h1 class="titlehead">About<hr class="line"></h1>
                 <h4 class="mt-4">
                     <p>
-                        本人為112年資訊工程系的應屆畢業碩士生，大學專題期間扮演著程式開發的角色，在專題實作期間
-                        第一次開始嘗試從專案構想到開發實作，因此在開發上仍有許多的進步空間，不管是資料庫設計或者程式開發撰寫上，
-                        都沒有完善的規劃和以及考慮程式重複性的重要，但也正是因為如此，我深刻體會到自主學習的重要性，
-                        舉例來說在開發APP時，由於沒有學習過相關APP開發的課程，因此當時在開發Android Studio時，
-                        透過網路上的教學影片和文章慢慢去摸索和學習，而在程式能力能需加強的前提下，花費將近半年的時間去提升解題和邏輯思考能力，
-                        而就是在大學專題的磨練下，也造就了後續我在開發專案時，遇到不熟悉的事物時能有基本的應對和實作的能力。
-                        <!-- 能需修改哭哭 -->
-                        
+                        本人為112年資訊工程系的應屆畢業碩士生，大學專題主要透過Android Studio的Java語言開發停車場預約APP，碩士研究則是採用Python進行機器學習的入侵檢測系統研究。
+                        大學專題期間主要扮演著程式開發的角色，而開發的過程中由於是第一次開始嘗試從專案構想到開發實作，因此我深刻體會到自主學習的重要性，舉例來說在開發APP時，由於
+                        大學期間尚未開發過APP相關專案，因此當時在開發APP時，大部分是透過網路上的教學和文章慢慢去摸索和學習的，並且開發專題時由於強烈地感受到自己程式能力的不足，也陸續的
+                        花費很多的時間去加強提升自己程式解題和邏輯思考能力，而就是在大學專題的磨練下，也造就了後續我在開發專案時，遇到不熟悉的事物時能有基本的應對和實作的能力。
+                        碩士研究期間的修行除了專注於研究論文以外，自己對於軟體上的開發和程式上的邏輯思考也不斷的在精進自我。像是現在去思考過去大學開發的專題，可以發現能有許多需要進步的空間，
+                        不管是資料庫設計又或者程式上的開發撰寫，皆缺乏完善的規劃和編寫乾淨的程式碼，以及考量專案的功能重複使用的重要性，正因為碩士期間的進修，後續再構思論文的研究和實作以及開發專案上，
+                        對於程式碼的編寫更加的注意。而碩士期間在論文研究上也花費無數個日子進行研究，其中最另我印象深刻的一點是探討文獻的實驗目的，
+                        過去實作中過於追求專案中的功能目的，缺乏思考參考文獻的內容，因此對於專案整體架構亦或是程式效能上皆欠缺考量。經過研究所期間的培養，學會思考開發上對於各種方法的選擇和目的，也從而提升我對於實作上的謹慎與考究。
                     </p>
                 </h4>
             </div>
         </section>
         <section class="resume" id="resume">
             <div class="container p-5">
-                <h1 class="titlehead">Resume<hr class="line"></h1>
+                <h1 class="titlehead">Experience<hr class="line"></h1>
                     <ul class="resumeEducation">
-                        <li><h3>2022 - 畢業專題</h3>
+                        <li><h3>2022 - 大學畢業專題_停車場預約APP</h3>
                             <ul>
                                 <li>1.Android Studio Java語言開發停車場 APP</li>
                                 <li>2.Arduino UNO 開發板，開發停車位感測模組 </li>
-                                <li>3.PHP程式語言，</li>
+                                <li>3.PHP程式語言，進行APP和感測器資料庫的串接互動</li>
                             </ul>
                         </li>
-                        <li><h3>2023</h3>
+                        <li><h3>2023 - 玉豐海洋科儀股份有限公司產學合作計劃案_水下載具人機介面</h3>
                             <ul>
-                                <li>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</li>
-                                <li>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</li>
+                                <li>1.採用Python語言，進行ROV操作搖桿模組和介面數據讀取</li>
+                                <li>2.透過PyQt5進行圖形介面設計</li>
+                                <li>3.透過Python vtk函式庫，進行方位感測器的3D模型模擬水下載具</li>
                             </ul>
                         </li>
-                        <li><h3>2024</h3>
+                        <li><h3>2024 - 碩士論文_基於機器學習入侵檢測系統</h3>
                             <ul>
                                 <li>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</li>
                                 <li>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</li>
