新增experience文字，修改頭貼和Project的圖片

--- a/index.html
+++ b/index.html
@@ -45,23 +45,26 @@
     <main>
         <section class="head"  id="home">
             <div class="container-fluid">
-                <div class="row min-vh-100 pt-5">
+                <!-- flex-column-reverse flex-md-row 寬度>=768>-->
+                <div class="row min-vh-100 pt-5 flex-column-reverse flex-md-row">
                     <!-- 置中 : d-flex justify-content-center align-items-center -->
-                    <div class="col-md-6 col-12  my-auto">
+                    <div class="col-md-6  my-auto d-flex justify-content-end head_text">
+                        <div>
+                            <h1>Hi🙋‍♀️，我是 詩穎</h1>
+                            <h4>畢業於「大葉大學 資訊工程系-碩士班🎓」</h4>
+                            <h3>平常熱愛撰寫程式、對新知識感到好奇</h3>
+                            <h2>如果您願意給我一個展現的機會，歡迎聯絡我!</h2>
+                            <div class="head_btn">
+                                <a class="btn" href="#aboutMe" role="button">Scroll Down </a>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-md-6 my-auto">
                         <div class="head_head text-center" >
-                            <img class="head_img " src="assets/images/img.svg">
+                            <img class="head_img " src="assets/images/img.jpg">
                             <img class="head_pic " src="assets/images/pic.svg">
                         </div>
                     </div>
-                    <div class="col-md-6 col-12  my-auto head_text">
-                        <h1>Hi🙋‍♀️，我是 詩穎</h1>
-                        <h4>畢業於「大葉大學 資訊工程系-碩士班🎓」</h4>
-                        <h3>平常熱愛撰寫程式、對新知識感到好奇</h3>
-                        <h2>如果您願意給我一個展現的機會，歡迎聯絡我!</h2>
-                        <div class="head_btn">
-                            <a class="btn" href="#aboutMe" role="button">Scroll Down </a>
-                        </div>
-                    </div> 
                 </div>
             </div>
         </section>
@@ -86,7 +89,7 @@
             <div class="container p-5">
                 <h1 class="titlehead">Experience<hr class="line"></h1>
                     <ul class="resumeEducation">
-                        <li><h3>2022 - 大學畢業專題_停車場預約APP</h3>
+                        <li><h3>2022 - 大學專題_停車場預約APP</h3>
                             <ul>
                                 <li>1.Android Studio Java語言開發停車場 APP</li>
                                 <li>2.Arduino UNO 開發板，開發停車位感測模組 </li>
@@ -102,8 +105,8 @@
                         </li>
                         <li><h3>2024 - 碩士論文_基於機器學習入侵檢測系統</h3>
                             <ul>
-                                <li>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</li>
-                                <li>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</li>
+                                <li>1.採用Python語言進行開發</li>
+                                <li>2.透過Python Scikit-learn函式庫，進行機器學習演算法工具</li>
                             </ul>
                         </li>
                     </ul>  
@@ -115,7 +118,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-12 p-1">
                             <div class="card project_img">
-                                <img src="assets/images/imgProject1.png" class="card-img-top" alt="...">
+                                <img src="assets/images/imgProject1.png" class="card-img-top " alt="...">
                                 <div class="project_btn">
                                     <a href="#aboutMe">
                                         <div class="p-4">
@@ -144,6 +147,50 @@
                         <div class="col-lg-4 col-12 p-1">
                             <div class="card project_img">
                                 <img src="assets/images/imgProject3.png" class="card-img-top" alt="...">
+                                <div class="project_btn">
+                                    <a href="#aboutMe">
+                                        <div class="p-4">
+                                            <div class="fs-3">停車場預約APP</div>
+                                            <div class="mt-2 fs-4">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</div>
+                                            <div class="fs-6">Read more</div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4 col-12 p-1">
+                            <div class="card project_img">
+                                <img src="assets/images/imgProject4.png" class="card-img-top" alt="...">
+                                <div class="project_btn">
+                                    <a href="#aboutMe">
+                                        <div class="p-4">
+                                            <div class="fs-3">停車場預約APP</div>
+                                            <div class="mt-2 fs-4">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</div>
+                                            <div class="fs-6">Read more</div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-12 p-1">
+                            <div class="card project_img ">
+                                <img src="assets/images/imgProject5.png" class="card-img-top" alt="...">
+                                <div class="project_btn">
+                                    <a href="#aboutMe">
+                                        <div class="p-4">
+                                            <div class="fs-3">停車場預約APP</div>
+                                            <div class="mt-2 fs-4">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</div>
+                                            <div class="fs-6">Read more</div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-12 p-1">
+                            <div class="card project_img">
+                                <img src="assets/images/imgProject6.png" class="card-img-top" alt="...">
                                 <div class="project_btn">
                                     <a href="#aboutMe">
                                         <div class="p-4">
