--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
         <section class="head"  id="home">
             <div class="container-fluid">
-                <!-- flex-column-reverse flex-md-row 寬度>=768>-->
+                <!-- 1. flex-md-row 寬度>=768呈現水平，2.flex-column-reverse 其餘情況呈現垂直且上下顛倒-->
                 <div class="row min-vh-100 pt-5 flex-column-reverse flex-md-row">
                     <!-- 置中 : d-flex justify-content-center align-items-center -->
                     <div class="col-md-6  my-auto d-flex justify-content-end head_text">
