修改文字和背景

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="#aboutMe">About Me </a> </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#resume">Experience </a>
+                            <a class="nav-link" href="#experience">Experience </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#project ">Project </a>
@@ -44,25 +44,27 @@
     </header>
     <main>
         <section class="head"  id="home">
-            <div class="container-fluid">
-                <!-- 1. flex-md-row 寬度>=768呈現水平，2.flex-column-reverse 其餘情況呈現垂直且上下顛倒-->
-                <div class="row min-vh-100 pt-5 flex-column-reverse flex-md-row">
-                    <!-- 置中 : d-flex justify-content-center align-items-center -->
-                    <div class="col-md-6  my-auto d-flex justify-content-end head_text">
-                        <div>
-                            <h1>Hi🙋‍♀️，我是 詩穎</h1>
-                            <h4>畢業於「大葉大學 資訊工程系-碩士班🎓」</h4>
-                            <h3>平常熱愛撰寫程式、對新知識感到好奇</h3>
-                            <h2>如果您願意給我一個展現的機會，歡迎聯絡我!</h2>
-                            <div class="head_btn">
-                                <a class="btn" href="#aboutMe" role="button">Scroll Down </a>
+            <div class="head_back">
+                <div class="container-fluid">
+                    <!-- 1. flex-md-row 寬度>=768呈現水平，2.flex-column-reverse 其餘情況呈現垂直且上下顛倒-->
+                    <div class="row min-vh-100 pt-5 flex-column-reverse flex-md-row">
+                        <!-- 置中 : d-flex justify-content-center align-items-center -->
+                        <div class="col-md-6  my-auto d-flex justify-content-end head_text">
+                            <div>
+                                <h1>Hi🙋‍♀️，我是 詩穎</h1>
+                                <h4>112年大葉大學-資訊工程系「應屆畢業碩士班🎓」</h4>
+                                <h3>平常熱愛撰寫程式、對新知識感到好奇</h3>
+                                <h2>如果您願意給我一個展現的機會，歡迎聯絡我!</h2>
+                                <div class="head_btn">
+                                    <a class="btn" href="#aboutMe" role="button">Scroll Down </a>
+                                </div>
                             </div>
-                        </div>
-                    </div> 
-                    <div class="col-md-6 my-auto">
-                        <div class="head_head text-center" >
-                            <img class="head_img " src="assets/images/img.jpg">
-                            <img class="head_pic " src="assets/images/pic.svg">
+                        </div> 
+                        <div class="col-md-6 my-auto">
+                            <div class="head_head text-center" >
+                                <img class="head_img " src="assets/images/img.jpg">
+                                <img class="head_pic " src="assets/images/pic.svg">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -73,22 +75,57 @@
                 <h1 class="titlehead">About<hr class="line"></h1>
                 <h4 class="mt-4">
                     <p>
-                        本人為112年資訊工程系的應屆畢業碩士生，大學專題主要透過Android Studio的Java語言開發停車場預約APP，碩士研究則是採用Python進行機器學習的入侵檢測系統研究。
-                        大學專題期間主要扮演著程式開發的角色，而開發的過程中由於是第一次開始嘗試從專案構想到開發實作，因此我深刻體會到自主學習的重要性，舉例來說在開發APP時，由於
-                        大學期間尚未開發過APP相關專案，因此當時在開發APP時，大部分是透過網路上的教學和文章慢慢去摸索和學習的，並且開發專題時由於強烈地感受到自己程式能力的不足，也陸續的
-                        花費很多的時間去加強提升自己程式解題和邏輯思考能力，而就是在大學專題的磨練下，也造就了後續我在開發專案時，遇到不熟悉的事物時能有基本的應對和實作的能力。
-                        碩士研究期間的修行除了專注於研究論文以外，自己對於軟體上的開發和程式上的邏輯思考也不斷的在精進自我。像是現在去思考過去大學開發的專題，可以發現能有許多需要進步的空間，
-                        不管是資料庫設計又或者程式上的開發撰寫，皆缺乏完善的規劃和編寫乾淨的程式碼，以及考量專案的功能重複使用的重要性，正因為碩士期間的進修，後續再構思論文的研究和實作以及開發專案上，
-                        對於程式碼的編寫更加的注意。而碩士期間在論文研究上也花費無數個日子進行研究，其中最另我印象深刻的一點是探討文獻的實驗目的，
-                        過去實作中過於追求專案中的功能目的，缺乏思考參考文獻的內容，因此對於專案整體架構亦或是程式效能上皆欠缺考量。經過研究所期間的培養，學會思考開發上對於各種方法的選擇和目的，也從而提升我對於實作上的謹慎與考究。
+                        <h3><mark>大學專題</mark></h3>
+                        <ul>
+                            <li>
+                                <h4>專題介紹:每逢週末假日民眾外出開車時，尋找停車位成為了一個極其重要的問題,由於不清楚各個停車場車位剩餘狀況,往往只能現場查看導致車位供不應求的堵塞現象,甚至嚴重點可能影響整個交通狀況。而本專題針對這問題製作了一個停車場預約APP進行改善，該APP的預約系統可分成APP開發和感測車位模組兩大部分。</h4>
+                                <ul>
+                                    <li>
+                                        <h4>
+                                            APP開發的部分，採用Android Studio的Java語言進行開發。該APP提供預約、查看車位的功能，並且在
+                                        </h4>
+                                    </li>
+                                    <li>
+                                        <h4>
+                                        感測車位模組的部分，並且為了降低廠商安裝停車檢測模組的成本問題,
+                                    採用價格低廉的光敏電阻感測器檢測車輛,並且結合成本低廉的ESP8266無線Wi-Fi模組，進行TCP / IP協議以此與系統伺服器端進行聯繫,以便將檢測後的車
+                                    位傳入伺服器端,方便用戶能在APP快速查看車位狀況。
+                                        </h4>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <h4>大學經驗:
+                                    大學專題期間主要扮演著程式開發的角色，而開發的過程中由於是第一次開始嘗試從專案構想到開發實作，因此我深刻體會到自主學習的重要性，舉例來說在開發APP時，由於
+                                    大學期間尚未開發過APP相關專案，因此當時在開發APP時，大部分是透過網路上的教學和文章慢慢去摸索和學習的，並且開發專題時由於強烈地感受到自己程式能力的不足，也陸續的
+                                    花費很多的時間去加強提升自己程式解題和邏輯思考能力，而就是在大學專題的磨練下，也造就了後續我在開發專案時，遇到不熟悉的事物時能有基本的應對和實作的能力。
+                                </h4>
+                            </li>
+                        </ul>
+                        <h3><mark>碩士研究</mark></h3>
+                        <ul>
+                            <li>
+                                <h4>論文介紹:
+                                    該專題主要是則是採用Python進行機器學習的入侵檢測系統研究
+                                </h4>
+                            </li>
+                            <li>                          
+                                <h4>碩士經驗:
+                                    碩士研究期間的修行除了專注於研究論文以外，自己對於軟體上的開發和程式上的邏輯思考也不斷的在精進自我。像是現在去思考過去大學開發的專題，可以發現能有許多需要進步的空間，
+                                    不管是資料庫設計又或者程式上的開發撰寫，皆缺乏完善的規劃和編寫乾淨的程式碼，以及考量專案的功能重複使用的重要性，正因為碩士期間的進修，後續再構思論文的研究和實作以及開發專案上，
+                                    對於程式碼的編寫更加的注意。而碩士期間在論文研究上也花費無數個日子進行研究，其中最另我印象深刻的一點是探討文獻的實驗目的，
+                                    過去實作中過於追求專案中的功能目的，缺乏思考參考文獻的內容，因此對於專案整體架構亦或是程式效能上皆欠缺考量。經過研究所期間的培養，學會思考開發上對於各種方法的選擇和目的，也從而提升我對於實作上的謹慎與考究。
+                                </h4>
+                            </li>
+                        </ul>
                     </p>
                 </h4>
             </div>
         </section>
-        <section class="resume" id="resume">
+        <section class="experience" id="experience">
             <div class="container p-5">
                 <h1 class="titlehead">Experience<hr class="line"></h1>
-                    <ul class="resumeEducation">
+                    <ul class="experienceEducation">
                         <li><h3>2022 - 大學專題_停車場預約APP</h3>
                             <ul>
                                 <li>1.Android Studio Java語言開發停車場 APP</li>
