修改背景圖片設定

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <ul>
                                     <li>
                                         <h4>
-                                            APP開發的部分，採用Android Studio的Java語言進行開發。該APP提供預約、查看車位的功能，並且在
+                                            APP開發的部分，採用Android Studio的Java語言進行開發。該APP提供預約和查看車位的功能，並且還提供檢舉功能，當預約車位被
                                         </h4>
                                     </li>
                                     <li>
