--- a/index.html
+++ b/index.html
@@ -72,49 +72,43 @@
         </section>
         <section class="aboutMe" id="aboutMe">
             <div class="container p-5">
-                <h1 class="titlehead">About<hr class="line"></h1>
+                <h1 class="titlehead">About Me<hr class="line"></h1>
                 <h4 class="mt-4">
                     <p>
                         <h3><mark>大學專題</mark></h3>
                         <ul>
                             <li>
-                                <h4>專題介紹:每逢週末假日民眾外出開車時，尋找停車位成為了一個極其重要的問題,由於不清楚各個停車場車位剩餘狀況,往往只能現場查看導致車位供不應求的堵塞現象,甚至嚴重點可能影響整個交通狀況。而本專題針對這問題製作了一個停車場預約APP進行改善，該APP的預約系統可分成APP開發和感測車位模組兩大部分。</h4>
+                                <h4>專題介紹 :
+                                    每逢週末假日民眾外出開車時，尋找停車位成為了一個極其重要的問題,由於不清楚各個停車場車位剩餘狀況,往往只能現場查看導致車位供不應求的堵塞現象,甚至嚴重點可能影響整個交通狀況。而本專題針對這問題製作了一個停車場預約APP進行改善，該APP的預約系統可分成APP開發和感測車位模組兩大部分。</h4>
                                 <ul>
                                     <li>
                                         <h4>
-                                            APP開發的部分，採用Android Studio的Java語言進行開發。該APP提供預約和查看車位的功能，並且還提供檢舉功能，當預約車位被
+                                            APP開發的部分，採用Android Studio的Java語言進行開發。該APP提供預約和車位查看的功能，並且還提供檢舉功能，當預約車位被占用，系統將提供新的車位給車主，以及該APP系統採用會員機制，需要事先註冊該APP會員，才能進行車位預約。
                                         </h4>
                                     </li>
                                     <li>
                                         <h4>
-                                        感測車位模組的部分，並且為了降低廠商安裝停車檢測模組的成本問題,
-                                    採用價格低廉的光敏電阻感測器檢測車輛,並且結合成本低廉的ESP8266無線Wi-Fi模組，進行TCP / IP協議以此與系統伺服器端進行聯繫,以便將檢測後的車
-                                    位傳入伺服器端,方便用戶能在APP快速查看車位狀況。
+                                            感測車位模組的部分，採用光敏電阻模組透過對於光線的檢測來判斷車位有無使用,並且結合成本低廉的ESP8266無線Wi-Fi模組，進行TCP / IP協議與Server端進行資料的傳遞，以便用戶能在APP內快速查看車位狀況。
                                         </h4>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <h4>大學經驗:
-                                    大學專題期間主要扮演著程式開發的角色，而開發的過程中由於是第一次開始嘗試從專案構想到開發實作，因此我深刻體會到自主學習的重要性，舉例來說在開發APP時，由於
-                                    大學期間尚未開發過APP相關專案，因此當時在開發APP時，大部分是透過網路上的教學和文章慢慢去摸索和學習的，並且開發專題時由於強烈地感受到自己程式能力的不足，也陸續的
-                                    花費很多的時間去加強提升自己程式解題和邏輯思考能力，而就是在大學專題的磨練下，也造就了後續我在開發專案時，遇到不熟悉的事物時能有基本的應對和實作的能力。
+                                <h4>大學經驗 :
+                                    大學專題期間主要扮演著程式開發的角色，在開發的過程中由於是第一次開始嘗試從專案構想到開發實作，因此我深刻體會到自主學習的重要性，舉例來說在開發APP時，由於大學期間尚未開發過APP相關專案，因此當時在開發APP時，大部分是透過網路上的教學和文章慢慢去摸索和學習的，並且開發專題時由於強烈地感受到自己程式能力的不足，也陸續的花費很多的時間去加強提升自己程式解題和邏輯思考能力，而就是在大學專題的磨練下，也造就了後續我在開發專案時，遇到不熟悉的事物時能有基本的應對和實作的能力。
                                 </h4>
                             </li>
                         </ul>
                         <h3><mark>碩士研究</mark></h3>
                         <ul>
                             <li>
-                                <h4>論文介紹:
-                                    該專題主要是則是採用Python進行機器學習的入侵檢測系統研究
+                                <h4>論文介紹 :
+                                    隨著網際網路在生活中的普及，對於保障網路的資訊安全，機密性、完整性和可用性，成為極其重要的議題，在這龐大的網路環境下，該如何防範網路流量中隱藏的惡意攻擊成為本論文的一大重點。入侵檢測系統（Intrusion Detection System,IDS)主要是用來檢測網路流量中入侵攻擊的行為系統，透過機器學習的技術來進行攻擊和正常行為的判斷。在機器學習領域中，特徵的保留和剔除相當重要，因此如何在模擬網路攻擊的資料集中，包持高準確率和高效能的篩選特徵，為本研究至關重要的步驟。本研究採用混合式特徵選擇，將特徵選擇中的過濾法和包裝法進行結合，提升過濾法快速剔除特徵後的準確率，改善包裝法篩選特徵子集中的低效率，並且結合XGBoost分類器作為本研究最終檢測攻擊行為的模型。
                                 </h4>
                             </li>
                             <li>                          
                                 <h4>碩士經驗:
-                                    碩士研究期間的修行除了專注於研究論文以外，自己對於軟體上的開發和程式上的邏輯思考也不斷的在精進自我。像是現在去思考過去大學開發的專題，可以發現能有許多需要進步的空間，
-                                    不管是資料庫設計又或者程式上的開發撰寫，皆缺乏完善的規劃和編寫乾淨的程式碼，以及考量專案的功能重複使用的重要性，正因為碩士期間的進修，後續再構思論文的研究和實作以及開發專案上，
-                                    對於程式碼的編寫更加的注意。而碩士期間在論文研究上也花費無數個日子進行研究，其中最另我印象深刻的一點是探討文獻的實驗目的，
-                                    過去實作中過於追求專案中的功能目的，缺乏思考參考文獻的內容，因此對於專案整體架構亦或是程式效能上皆欠缺考量。經過研究所期間的培養，學會思考開發上對於各種方法的選擇和目的，也從而提升我對於實作上的謹慎與考究。
+                                    碩士研究期間的修行除了專注於論文研究以外，自己對於軟體上的開發和程式上的邏輯思考也不斷的在精進自我。像是現在去思考過去大學開發的專題，可以發現能有許多需要進步的空間，不管是資料庫設計又或者程式上的開發撰寫，皆缺乏完善的規劃和編寫乾淨的程式碼，以及考量專案的功能重複使用的重要性，正因為碩士期間的進修，後續再構思論文的研究和實作以及開發專案上，對於程式碼的編寫更加的注意。而碩士期間在論文研究上也花費無數個日子進行研究，其中最另我印象深刻的一點是探討文獻的實驗目的，過去實作中過於追求專案中的功能目的，缺乏思考參考文獻的內容，因此對於專案整體架構或是程式效能上皆欠缺考量。經過研究所期間的培養，學會思考開發上對於各種方法的選擇和目的，也從而提升我對於實作上的謹慎與考究。
                                 </h4>
                             </li>
                         </ul>
@@ -143,7 +137,7 @@
                         <li><h3>2024 - 碩士論文_基於機器學習入侵檢測系統</h3>
                             <ul>
                                 <li>1.採用Python語言進行開發</li>
-                                <li>2.透過Python Scikit-learn函式庫，進行機器學習演算法工具</li>
+                                <li>2.透過Python Scikit-learn函式庫，作為機器學習演算法工具</li>
                             </ul>
                         </li>
                     </ul>  
@@ -158,9 +152,9 @@
                                 <img src="assets/images/imgProject1.png" class="card-img-top " alt="...">
                                 <div class="project_btn">
                                     <a href="#aboutMe">
-                                        <div class="p-4">
+                                        <div class="project_text p-4">
                                             <h3>停車場預約APP</h3>
-                                            <h4 class="mt-2 ">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h4>
+                                            <h5 class="mt-2">該APP採用Java語言進行開發，提供車主APP預約停車的服務。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -172,9 +166,9 @@
                                 <img src="assets/images/imgProject2.png" class="card-img-top" alt="...">
                                 <div class="project_btn">
                                     <a href="#aboutMe">
-                                        <div class="p-4">
-                                             <h3>停車場預約APP</h3>
-                                            <h4 class="mt-2">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h4>
+                                        <div class="project_text p-4">
+                                            <h3>水下載具人機介面</h3>
+                                            <h5 class="mt-2">該圖形介面採用PyQt5和Python語言，進行數據和方位感測器顯示。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -186,9 +180,9 @@
                                 <img src="assets/images/imgProject3.png" class="card-img-top" alt="...">
                                 <div class="project_btn">
                                     <a href="#aboutMe">
-                                        <div class="p-4">
-                                             <h3>停車場預約APP</h3>
-                                            <h4 class="mt-2 ">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h4>
+                                        <div class="project_text p-4">
+                                            <h3>貪吃蛇遊戲</h3>
+                                            <h5 class="mt-2">該貪吃蛇遊戲開發採用Python的PyGame模組，結合OpenCV函式庫進行遊玩。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -202,9 +196,9 @@
                                 <img src="assets/images/imgProject4.png" class="card-img-top" alt="...">
                                 <div class="project_btn">
                                     <a href="#aboutMe">
-                                        <div class="p-4">
-                                             <h3>停車場預約APP</h3>
-                                            <h4 class="mt-2 ">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h4>
+                                        <div class="project_text p-4">
+                                            <h3>遠端監控</h3>
+                                            <h5 class="mt-2">該Web網頁後端語言採用Php語言和前端前端開發工具Bootstrap製作，透過感測器監控溫溼度和燈泡開關狀態。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -216,9 +210,9 @@
                                 <img src="assets/images/imgProject5.png" class="card-img-top" alt="...">
                                 <div class="project_btn">
                                     <a href="#aboutMe">
-                                        <div class="p-4">
-                                             <h3>停車場預約APP</h3>
-                                            <h4 class="mt-2 ">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h4>
+                                        <div class="project_text p-4">
+                                            <h3>圖片浮水印</h3>
+                                            <h5 class="mt-2">該介面採用C#的Windows Forms進行開發，透過Webcam拍攝的照片結合該應用程式，製作簡易的照片浮水印軟體。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -230,9 +224,9 @@
                                 <img src="assets/images/imgProject6.png" class="card-img-top" alt="...">
                                 <div class="project_btn">
                                     <a href="#aboutMe">
-                                        <div class="p-4">
-                                             <h3>停車場預約APP</h3>
-                                            <h4 class="mt-2 ">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h4>
+                                        <div class="project_text p-4">
+                                            <h3>選課APP</h3>
+                                            <h5 class="mt-2">該App採用Flutter跨平台應用程式的Dart語言進行開發，在APP上進行學校課程加退選。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -243,17 +237,17 @@
             </div>
         </section>       
         <section class="contact" id="contact">
-            <div class="container pt-3">
+            <div class="container-fluid pt-3">
                 <div class="row">
                     <h5 class="col-lg-4 col-12 text-center"><svg class="mb-2" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                      </svg> GitHub :XXXXXXX <a href="#home" class="link-light"></a></h5>
+                      </svg> GitHub :strings143 <a href="#home" class="link-light"></a></h5>
                     <h5 class="col-lg-4 col-12 text-center"><svg class="mb-2" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
                         <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
                       </svg> E-mail : r1106005@cloud.dyu.edu.tw</h5>
                     <h5 class="col-lg-4 col-12 text-center"><svg class="mb-2" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
-                      </svg> Cell : 09-XXXXXXX</h5>
+                      </svg> Cell : 09-05032089</h5>
                 </div>
             </div>
         </section>
